# minder-helper

./: .gitignore  LICENSE  README.md  minder-exporter.py  pyproject.toml
src/: minder-exporter.py
