[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minder-exporter"
version = "0.0.1"
authors = [
  { name="ikstream", email="author@example.com" },
]
description = "A library to interact with minder mindmap files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]